# two-party-eddsa

./: .gitignore  Cargo.toml  TODO  makefile  readme.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/api/: mod.rs
client/src/utilities/: requests.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: mod.rs
server/src/routes/: eddsa.rs  mod.rs
server/src/storage/: db.rs  file.rs
src/: .eddsa.rs.swp  client.rs  eddsa.rs  lib.rs  server.rs  test.rs  util.rs
two-party-eddsa/: Cargo.toml
two-party-eddsa/src/: lib.rs  test.rs  two_party_eddsa.rs
