[package]
name = "two-party-eddsa"
version = "0.1.0"
authors = ["ccyanxyz <790266922@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
curv = { git = "https://github.com/KZen-networks/curv", tag = "v0.2.0-ed25519", features =  ["ec_ed25519"]}
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
argparse = "0.2.2"
stopwatch = "0.0.7"
rustc-serialize = "0.3"
uuid = { version = "0.7", features = ["v4"] }
