[package]
name = "two-party-eddsa-server"
version = "0.1.2"
authors = ["Oded Leiba <oded@kzencorp.com>"]
edition = "2018"

[lib]
name = "two_party_eddsa_server"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "fc78eaf8363f1d3346ed9f51a6168f4b55152e8a" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "fc78eaf8363f1d3346ed9f51a6168f4b55152e8a" }
rocksdb = "0.10.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
uuid = { version = "0.7", features = ["v4"] }
failure = "0.1.5"
two-party-eddsa = { path = "../two-party-eddsa" }
